Updated to upload for soft launch

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <meta http-equiv="X-UA-Compatible" content=" IE=edge">
         <meta name = "viewpoint" content ="width=device-width, initial-sc ale=1.0">
-        <title>Jadin Wilkening's Personal Website</title>
+        <title>Jadin Wilkening's Website</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/b607d9895c.js" crossorigin="anonymous"></script>
 </head>
@@ -15,7 +15,7 @@
                 <img src="pics/JW Logo Design.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="bio.html">Bio</a></li>
+                    <!--<li><a href="bio.html">Bio</a></li>-->
                     <li><a href="resume.html">Resume</a></li>
                     <!--<li><a href="projects.html">Projects</a></li>
                     <li><a href="inspirations.html">Inspirations</a></li>
@@ -29,34 +29,73 @@
         <div class="resume-container">
             <div class="resume-content">
                 <h1>Jadin Wilkening</h1>
-                <p>Professional Title Here | Lynchburg, VA 24504</p><br><br>
+                <p>Recent Computer Science & Mathematics Graduate | Lynchburg, VA 24504</p><br><br>
                 <h2>Contact Information</h2>
                 <p>Email: jadinwilkening@gmail.com</p>
                 <p>Phone: (719) 337-2933</p><br><br>
-                <h2>Experience</h2>
-                <br><p>June 2023 - May 2024<br></p>
-                <h3>Disasters Program Intern | NASA | Washington DC</h3>
-                <p> • Enhanced the accessibility and visual appeal of NASA's web applications by implementing front-end features with HTML, CSS, and JavaScript.<br>
-                    • Integrated real-time data visualization using MySQL to enhance user access to dynamic information, furthering their comprehension of NASA's ongoing missions.<br>
-                    • Defined and conducted design processes at all stages, including research, conceptualization, testing and implementation.<br>
-                    • Collaborated in designing and developing appealing user interfaces for various web elements and applications on SharePoint platform.<br>
-                <br></p>
-                <p>September 2022 - December 2022<br></p>
-                <h3>Data Engineer Intern | NASA Proposal Writing and Evaluation Experience | Remote</h3>
-                <p> • Developed an innovative proposal to enhance NASA's Technological Taxonomies, competing against peers to drive forward cutting-edge advancements.<br>
-                    • Actively participated in providing constructive critique and guidance to peers and NASA professionals as part of a proposal reviewer panel.<br>
-                <br></p>
-                <p>September 2021  - December 2022<br></p>
-                <h3>Lead Business Administrator | NASA L'Space Mission Concept Academy | Remote</h3>
-                <p> • Took charge of leading and collaborating with a student team to conduct comprehensive scientific research on the existence and conditions of life forms on the moon.<br>
-                    • Facilitated clear and concise communication among various stakeholders including business team, departments, and NASA leadership. <br>
+                <h2>Education</h2>
+                <p>• Bachelor of Science: Computer Science and Mathematics</p>
+                <p>Randolph College | Lynchburg, VA | Completed May 2024</p>
+                <p>• Associate of Science: Computer Engingeering</p>
+                <p>Pikes Peak Community College | Colorado Springs, CO </p>
+                <p>• Bachelor of Arts: Media Arts and Animation</p>
+                <p>The Art Institute of Colorado | Denver, CO</p>
                 <br>
+                <h2>Skills</h2>
+                <p> • Scripting Languages: PHP, Python, Javascript<br>
+                    • Version Control Systems: Git, Github<br>
+                    • Back-End and Database Skills<br>
+                    • Front-End Skills: HTML, CSS<br>
+                    • Programming Languages: Java, C#, Python<br>
+                    • Microsoft Skills: Office 365, SharePoint, PowerBI</p><br><br>
+                <h2>Experience</h2>
+                <h3>Website Developer Intern | NASA </h3>
+                <p>June 2023 - May 2024 | Washington DC<br></p>
+                <p> • Optimized the accessibility and aesthetics of NASA’s web applications by developing front-end components using HTML, CSS, and JavaScript.<br>
+                    • Implemented real-time data visualization with MySQL, improving user engagement and understanding of NASA's active missions.<br>
+                    • Contributed to design processes at all stages, including research, conceptualization, testing, and implementation, ensuring a user-centric approach.<br>
+                    • Created a new SharePoint web application from scratch using PowerApps and Power BI, enhancing data integration and user interaction.<br>
+                    • Collaborated on designing and developing intuitive user interfaces for web elements and applications within the SharePoint platform.<br><br></p>
+                <h3>Presidential Ambassador | Randolph College</h3>
+                <p>September 2022 - May 2024 | Lynchburg, VA <br></p>
+                <p> • Represented and promoted Randolph College in collaboration with the Office of the President, serving as a key ambassador for the college’s mission and values.<br>
+                    • Hosted and facilitated major college events, engaging with community leaders, alumni, business executives, and political representatives to strengthen the college’s external relations.<br>
+                    • Participated in high-impact mentorship meetings, including an off-campus leadership retreat, to develop and refine leadership skills while contributing to strategic discussions.<br>
+                    • Acted as a liaison between the college and its stakeholders, fostering strong connections and enhancing the college’s visibility and reputation in the broader community.<br>
                 <br></p>
-                <p> August 2019  - February 2020<br></p>
-                <h3>Project Manager Intern | NASA Community College Aerospace Scholars | Remote</h3>
-                <p> • Managed and supervised a group of students to successfully create and program a robot capable of performing tasks similar to those executed by a NASA Mars rover.<br>
-                    • Developed comprehensive project plans with clearly defined timelines and assigned responsibilities to team members effectively. <br>
-                     <br>
+                <h3>IT / Help Desk Student Assistant | Randolph College</h3>
+                <p>September 2022 - May 2024 | Lynchburg, VA <br></p>
+                <p> • Provided technical support to students, faculty, and staff, troubleshooting hardware and software issues in a timely manner.<br>
+                    • Assisted in the setup, configuration, and maintenance of computers, printers, and other IT equipment across the campus.<br>
+                    • Installed and updated software applications, ensuring all systems were up-to-date and running smoothly.<br>
+                <br></p>
+                <h3>Data Engineer Intern | NASA Proposal Writing and Evaluation Experience</h3>
+                <p>September 2022 - December 2022 | Remote <br></p>
+                <p> • Developed a proposal to enhance NASA's Technological Taxonomies, successfully competing with fellow interns to introduce innovative advancements in space technology.<br>
+                    • Contributed as a member of a proposal review panel, providing strategic feedback and evaluations that informed the direction of key NASA projects.<br>
+                    • Collaborated with cross-functional teams, working alongside seasoned professionals to integrate technological insights into NASA’s initiatives.<br>
+                    • Actively participated in strategic discussions, aligning emerging technologies with NASA’s long-term exploration and research objectives.<br><br></p>
+                <h3>Product Support Specialist | London Computer Systems</h3>
+                <p> September 2021- April 2022 | Cincinnati, OH <br></p>
+                <p> • Researched, diagnosed, and resolved software issues, employing advanced troubleshooting techniques to deliver effective solutions.<br>
+                    • Collaborated with Subject Matter Experts to develop and implement improved solutions for recurring client-focused challenges.<br>
+                    • Provided in-depth technical demonstrations to assist customers and team members in understanding products, components, and systems.<br><br></p>
+                <h3>Lead Business Administrator Intern | NASA L'Space Mission Concept Academy</h3>
+                <p>September 2021  - December 2022 | Remote <br></p>
+                <p> • Led a student research team in conducting comprehensive studies on the potential existence and environmental conditions of life forms on the moon.<br>
+                    • Managed project timelines and deliverables, ensuring research activities were completed on schedule and met NASA’s high standards.<br>
+                    • Synthesized complex research findings into actionable insights, presenting them to senior NASA leadership.<br><br></p>
+                <h3>Technical Support Engineer | TekExperts</h3>
+                <p>March 2021  - September 2021 | Colorado Springs, CO <br></p>
+                <p> • Consulted with clients to diagnose and understand user issues, utilizing testing scripts and probing questions to identify root causes and implement effective solutions.<br>
+                    • Collaborated with multiple departments and Subject Matter Experts to address and fulfill diverse service requests, ensuring comprehensive support across various technical areas.<br>
+                    • Advocated for end-users by performing detailed tests and problem analysis for server, desktop, and IT infrastructure issues, driving resolution and enhancing system performance.<br><br></p>
+                <h3>Project Manager Intern | NASA Community College Aerospace Scholars</h3>
+                <p> August 2019  - February 2020 | San Jose, CA <br></p>
+                <p> • Led and supervised a student team in the design, creation, and programming of a robot capable of performing tasks akin to those executed by a NASA Mars rover, ensuring project milestones were met with precision.<br>
+                    • Monitored project progress and resolved challenges, ensuring the team stayed on track to achieve its objectives within the set timeframe.<br>
+                    • Facilitated collaboration and communication, fostering a productive team environment that supported innovation and problem-solving.<br>
+                     <br><br>
                 <br>
                 <br></p>
             </div>
