--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <meta charset = "UTF-8">
         <meta http-equiv="X-UA-Compatible" content=" IE=edge">
         <meta name = "viewpoint" content ="width=device-width, initial-sc ale=1.0">
-        <title>Jadin Wilkening's Personal Website</title>
+        <title>Jadin Wilkening's Website</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/b607d9895c.js" crossorigin="anonymous"></script>
 </head>
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="bio.html">Bio</a></li>
-                    <li><a href="resume.html">Resume</a></li>
+                    <!--<li><a href="resume.html">Resume</a></li>-->
                     <!--<li><a href="projects.html">Projects</a></li>
                     <li><a href="inspirations.html">Inspirations</a></li>
                     <li><a href="blog.html">Blog</a></li>
